<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/second_menu_color">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/butrootsmenu"
        android:layout_alignParentTop="true"
        android:textColor="@color/white"
        android:layout_margin="50dp"
        android:autoSizeTextType="uniform"
        app:autoSizeTextType="uniform"
        android:text="@string/second_menu_text"

        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:id="@+id/butrootsmenu"
        >

        <Button

            android:id="@+id/manmenu"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/manual"
            android:textSize="20dp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/setmenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:textColor="@color/white"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/setting"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>

</RelativeLayout>